unpackaged/objects/ERPIntegrationRule__mdt.object
<CustomObject>
  <fields>
    <fullName>ACC_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Accounts?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ADR_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Addresses?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>AR_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Accounts Receivables?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>AttributeRecordsToCustomerAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, records will be attributed to Customer Address records at the first attempt (falling back to Primary Address, then Customer Master records if needed). If unchecked, Customer Addresses are ignored, and attribution will be to Primary Address.</inlineHelpText>
    <label>Attribute Records To Customer Address</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CIMIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIM Is Enabled?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CMP_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Campaigns?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CON_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Contracts?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CON_UseContractNumberAsExternalKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use ContractNumber As ExternalKey</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CST_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Consignment Stocks?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CompanyCode__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>0012</fullName>
        </value>
        <value>
          <fullName>004</fullName>
          <default>true</default>
          <label>004</label>
        </value>
        <value>
          <fullName>010</fullName>
        </value>
        <value>
          <fullName>017</fullName>
        </value>
        <value>
          <fullName>020</fullName>
        </value>
        <value>
          <fullName>030</fullName>
        </value>
        <value>
          <fullName>044</fullName>
        </value>
        <value>
          <fullName>047</fullName>
        </value>
        <value>
          <fullName>056</fullName>
        </value>
        <value>
          <fullName>057</fullName>
        </value>
        <value>
          <fullName>060</fullName>
        </value>
        <value>
          <fullName>070</fullName>
        </value>
        <value>
          <fullName>080</fullName>
        </value>
        <value>
          <fullName>095</fullName>
        </value>
        <value>
          <fullName>101</fullName>
        </value>
        <value>
          <fullName>110</fullName>
        </value>
        <value>
          <fullName>116</fullName>
        </value>
        <value>
          <fullName>120</fullName>
        </value>
        <value>
          <fullName>124</fullName>
        </value>
        <value>
          <fullName>131</fullName>
        </value>
        <value>
          <fullName>136</fullName>
        </value>
        <value>
          <fullName>140</fullName>
        </value>
        <value>
          <fullName>141</fullName>
        </value>
        <value>
          <fullName>143</fullName>
        </value>
        <value>
          <fullName>150</fullName>
        </value>
        <value>
          <fullName>155</fullName>
        </value>
        <value>
          <fullName>173</fullName>
        </value>
        <value>
          <fullName>174</fullName>
        </value>
        <value>
          <fullName>178</fullName>
        </value>
        <value>
          <fullName>181</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Countries_IsExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to exclude the countries specified; uncheck to include only the countries specified.</inlineHelpText>
    <label>Is Exclusive (Countries)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Countries__c</fullName>
    <inlineHelpText>Specify a list of countries (one per line) that this rule applies to. Leave blank to apply to all countries</inlineHelpText>
    <label>Countries</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OR_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Open Orders?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PR_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Product?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_AccountType_IsExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exclusive (AT)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_AccountTypes__c</fullName>
    <label>Account Types</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>SA_AttributeSalesToCustomerAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, sales will be attributed to Customer Address records at the first attempt (falling back to Primary Address, then Customer Master records if needed). If unchecked, Customer Addresses are ignored, and attribution will be to Primary Address.</inlineHelpText>
    <label>Attribute sales to Customer Addresses</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_ExcludeLabAddresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Lab Addresses?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_IncludeLinesWithoutCustomerOrderNo__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, sales lines that do not have a Customer Order Number will not be uploaded.</inlineHelpText>
    <label>Include sales without a Customer Order #</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Sales Analytics?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_UseBranchAccountNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Sales Analytics integration will only use branch account mappings if this box is ticked.</inlineHelpText>
    <label>Use Branch Account Numbers</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_WarehouseCode_IsExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exclusive (WC)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SA_WarehouseCodes__c</fullName>
    <label>Warehouse Codes</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>SH_IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Sales History?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SourceIdERP__c</fullName>
    <label>Source ERP</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
          <label>Movex</label>
        </value>
        <value>
          <fullName>2</fullName>
          <default>true</default>
          <label>AX</label>
        </value>
        <value>
          <fullName>4</fullName>
          <label>SAP Hanau</label>
        </value>
        <value>
          <fullName>7</fullName>
          <label>BPCS US</label>
        </value>
        <value>
          <fullName>31</fullName>
          <label>SAP Bensheim</label>
        </value>
        <value>
          <fullName>8</fullName>
          <label>BPCS DEBS</label>
        </value>
        <value>
          <fullName>33</fullName>
          <label>MIS</label>
        </value>
        <value>
          <fullName>58</fullName>
          <label>MIS US DB2DB</label>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>49</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>UseBranchAccountNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Branch Account Numbers</label>
    <type>Checkbox</type>
  </fields>
  <label>ERP Integration Rule</label>
  <listViews>
    <fullName>All_Rule_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Countries__c</columns>
    <columns>Countries_IsExclusive__c</columns>
    <columns>IsEnabled__c</columns>
    <columns>CIMIsEnabled__c</columns>
    <columns>ACC_IsEnabled__c</columns>
    <columns>SA_IsEnabled__c</columns>
    <columns>SH_IsEnabled__c</columns>
    <columns>PR_IsEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rule Records</label>
    <language>en_US</language>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <pluralLabel>ERP Integration Rules</pluralLabel>
  <validationRules>
    <fullName>CompanyCodePicklistIsNotTooLong</fullName>
    <active>true</active>
    <description>Ensures that records cannot be created that could break the integration.</description>
    <errorConditionFormula>LEN(TEXT(CompanyCode__c)) &gt; 20</errorConditionFormula>
    <errorDisplayField>CompanyCode__c</errorDisplayField>
    <errorMessage>The API value of the item picked in the Company Code picklist is too long to be valid.</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>ErpIdMustBeNumeric</fullName>
    <active>true</active>
    <description>Ensures that records cannot be created that could break the integration.</description>
    <errorConditionFormula>NOT(ISNUMBER(TEXT(SourceIdERP__c)))</errorConditionFormula>
    <errorDisplayField>SourceIdERP__c</errorDisplayField>
    <errorMessage>The API value of the Source ERP picklist must be numeric. Check that the value you have selected for this picklist is a valid ERP ID</errorMessage>
  </validationRules>
</CustomObject>